Fixed a wrapping issue

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -54,3 +54,7 @@ label {
 .no-result {
 	display: none;
 }
+
+.dontmesswithmywrap {
+  white-space: normal;
+}
